[Fabric] Linux fonts path #57